src/test/ui/coherence/impl-foreign[fundemental[foreign]]-for-foreign.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-foreign[fundemental[foreign]]-for-foreign.rs:11:1
   |
LL | impl Remote1<Box<String>> for i32 {
   | ^^^^^--------------------^^^^^---
   | |    |                        |
   | |    |                        `i32` is not defined in the current crate
   | |    `String` is not defined in the current crate
   | |    `std::alloc::Global` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-foreign[fundemental[foreign]]-for-foreign.rs:15:1
   |
LL | impl Remote1<Box<Rc<i32>>> for f64 {
   | ^^^^^---------------------^^^^^---
   | |    |                         |
   | |    |                         `f64` is not defined in the current crate
   | |    `Rc` is not defined in the current crate
   | |    `std::alloc::Global` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-foreign[fundemental[foreign]]-for-foreign.rs:19:1
   |
LL | impl<T> Remote1<Box<Rc<T>>> for f32 {
   | ^^^^^^^^-------------------^^^^^---
   | |       |                       |
   | |       |                       `f32` is not defined in the current crate
   | |       `Rc` is not defined in the current crate
   | |       `std::alloc::Global` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0117`.
